@@ -7,18 +7,23 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
+
 //Account 타입의 객체를 쓰기위해
 //@AuthenticationPrincipal 핸들러 사용하지 않고 UserAccount,@CurrentUser 작성
-
+//springsecurity 다루는 user정보를 연동
 @Getter
 public class UserAccount extends User {
 
     private Account account;
 
     public UserAccount(Account account) {
-        super(account.getNickname(), account.getPassword(), List.of(new SimpleGrantedAuthority("ROLE_USER")));
+        super(account.getNickname(), account.getPassword(), Arrays.asList(new SimpleGrantedAuthority("ROLE_USER")));
+        //super(account.getNickname(), account.getPassword(), List.of(new SimpleGrantedAuthority("ROLE_USER")));
         this.account = account;
     }
+
+
 }
